--- a/index.html
+++ b/index.html
@@ -1,467 +1,266 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>APA 7 Submission Checklist</title>
-  <style>
-    :root{
-      --bg: #0b1220;
-      --card: rgba(255,255,255,0.06);
-      --card2: rgba(255,255,255,0.10);
-      --text: rgba(255,255,255,0.92);
-      --muted: rgba(255,255,255,0.70);
-      --muted2: rgba(255,255,255,0.55);
-      --border: rgba(255,255,255,0.12);
-      --shadow: 0 16px 40px rgba(0,0,0,0.35);
-      --radius: 18px;
-      --gap: 12px;
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>APA Checklist</title>
 
-      /* Accent — tweak to match your palette */
-      --accent: #8fe3c7;
-    }
+<style>
+:root{
+  --bg:#f5f5f5;
+  --card:#ffffff;
+  --border:#e3e3e3;
+  --text:#222;
+  --muted:#666;
+  --accent:#6b6b6b;
+  --radius:14px;
+}
 
-    *{ box-sizing: border-box; }
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background: radial-gradient(1200px 700px at 20% -10%, rgba(143,227,199,0.18), transparent 55%),
-                  radial-gradient(900px 600px at 100% 0%, rgba(167,139,250,0.14), transparent 50%),
-                  var(--bg);
-      color: var(--text);
-      padding: 18px;
-    }
+*{box-sizing:border-box;}
 
-    .wrap{ max-width: 560px; margin: 0 auto; }
+body{
+  margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  background:var(--bg);
+  padding:10px;
+}
 
-    .card{
-      background: linear-gradient(180deg, rgba(255,255,255,0.08), rgba(255,255,255,0.05));
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      overflow: hidden;
-    }
+.widget{
+  max-width:380px;
+  margin:auto;
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius);
+  box-shadow:0 4px 14px rgba(0,0,0,0.05);
+  overflow:hidden;
+}
 
-    header{
-      padding: 16px 16px 12px 16px;
-      border-bottom: 1px solid var(--border);
-    }
+header{
+  padding:12px;
+  border-bottom:1px solid var(--border);
+}
 
-    .titleRow{
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      gap: 10px;
-    }
+h1{
+  font-size:14px;
+  margin:0;
+  font-weight:600;
+}
 
-    h1{
-      font-size: 16px;
-      line-height: 1.2;
-      margin: 0;
-      letter-spacing: 0.2px;
-    }
+.progressWrap{
+  padding:8px 12px 0 12px;
+}
 
-    .subtitle{
-      margin: 6px 0 0 0;
-      font-size: 12px;
-      color: var(--muted2);
-    }
+.progressText{
+  font-size:11px;
+  color:var(--muted);
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:6px;
+}
 
-    .pill{
-      display:inline-flex;
-      align-items:center;
-      gap: 8px;
-      padding: 8px 10px;
-      border-radius: 999px;
-      background: rgba(255,255,255,0.08);
-      border: 1px solid var(--border);
-      color: var(--muted);
-      font-size: 12px;
-      white-space: nowrap;
-      user-select: none;
-    }
+.bar{
+  height:6px;
+  background:#ececec;
+  border-radius:999px;
+  overflow:hidden;
+}
 
-    .progressBlock{ padding: 12px 16px 0 16px; }
+.fill{
+  height:100%;
+  width:0%;
+  background:var(--accent);
+  transition:width .2s ease;
+}
 
-    .progressMeta{
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      margin-bottom: 8px;
-      gap: 10px;
-      color: var(--muted);
-      font-size: 12px;
-    }
+.list{
+  padding:8px 8px 12px 8px;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
 
-    .bar{
-      height: 10px;
-      background: rgba(255,255,255,0.08);
-      border: 1px solid var(--border);
-      border-radius: 999px;
-      overflow:hidden;
-    }
+.groupTitle{
+  font-size:11px;
+  font-weight:600;
+  color:var(--muted);
+  margin:6px 4px 0 4px;
+  text-transform:uppercase;
+  letter-spacing:.5px;
+}
 
-    .barFill{
-      height: 100%;
-      width: 0%;
-      background: linear-gradient(90deg, var(--accent), rgba(143,227,199,0.65));
-      border-radius: 999px;
-      transition: width 220ms ease;
-    }
+.item{
+  display:flex;
+  align-items:flex-start;
+  gap:8px;
+  padding:6px 6px;
+  border-radius:8px;
+  cursor:pointer;
+}
 
-    .list{
-      padding: 12px 12px 14px 12px;
-      display:flex;
-      flex-direction:column;
-      gap: var(--gap);
-    }
+.item:hover{
+  background:#f3f3f3;
+}
 
-    .group{
-      background: rgba(255,255,255,0.05);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      overflow:hidden;
-    }
+input[type="checkbox"]{
+  width:14px;
+  height:14px;
+  accent-color:#444;
+  margin-top:2px;
+}
 
-    .groupHeader{
-      padding: 10px 12px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap: 10px;
-      background: rgba(255,255,255,0.04);
-      border-bottom: 1px solid rgba(255,255,255,0.08);
-    }
+.label{
+  font-size:12px;
+  line-height:1.3;
+  color:var(--text);
+}
 
-    .groupTitle{
-      font-size: 13px;
-      font-weight: 650;
-      letter-spacing: 0.2px;
-      color: rgba(255,255,255,0.86);
-    }
+.checked .label{
+  text-decoration:line-through;
+  color:#999;
+}
 
-    .groupCount{
-      font-size: 12px;
-      color: var(--muted2);
-    }
+footer{
+  border-top:1px solid var(--border);
+  padding:8px 12px;
+  text-align:right;
+}
 
-    .items{
-      padding: 8px;
-      display:flex;
-      flex-direction:column;
-      gap: 8px;
-    }
-
-    label.item{
-      display:flex;
-      align-items:flex-start;
-      gap: 10px;
-      padding: 10px 10px;
-      border-radius: 12px;
-      border: 1px solid rgba(255,255,255,0.10);
-      background: rgba(255,255,255,0.04);
-      cursor: pointer;
-      transition: transform 120ms ease, background 120ms ease, border-color 120ms ease;
-    }
-
-    label.item:hover{
-      transform: translateY(-1px);
-      border-color: rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.06);
-    }
-
-    input[type="checkbox"]{
-      margin-top: 2px;
-      width: 18px;
-      height: 18px;
-      accent-color: var(--accent);
-      cursor: pointer;
-      flex: 0 0 auto;
-    }
-
-    .text{
-      display:flex;
-      flex-direction:column;
-      gap: 2px;
-      min-width: 0;
-    }
-
-    .main{
-      font-size: 13px;
-      line-height: 1.25;
-      color: rgba(255,255,255,0.90);
-      word-break: break-word;
-    }
-
-    .note{
-      font-size: 12px;
-      line-height: 1.25;
-      color: var(--muted2);
-      word-break: break-word;
-    }
-
-    .checked .main{
-      text-decoration: line-through;
-      color: rgba(255,255,255,0.55);
-    }
-
-    footer{
-      padding: 12px 16px 16px 16px;
-      border-top: 1px solid var(--border);
-      display:flex;
-      gap: 10px;
-      justify-content:space-between;
-      align-items:center;
-      flex-wrap: wrap;
-    }
-
-    .btn{
-      appearance:none;
-      border: 1px solid var(--border);
-      background: rgba(255,255,255,0.06);
-      color: var(--text);
-      padding: 10px 12px;
-      border-radius: 12px;
-      font-size: 12px;
-      cursor:pointer;
-      transition: background 120ms ease, transform 120ms ease, border-color 120ms ease;
-    }
-    .btn:hover{
-      background: rgba(255,255,255,0.09);
-      border-color: rgba(255,255,255,0.18);
-      transform: translateY(-1px);
-    }
-    .btn:active{ transform: translateY(0px); }
-
-    .hint{
-      font-size: 12px;
-      color: var(--muted2);
-    }
-  </style>
+button{
+  font-size:11px;
+  border:none;
+  background:none;
+  color:var(--muted);
+  cursor:pointer;
+}
+button:hover{color:#000;}
+</style>
 </head>
+
 <body>
-  <div class="wrap">
-    <div class="card" id="apaWidget">
-      <header>
-        <div class="titleRow">
-          <div>
-            <h1>APA 7th Edition — Quick Submission Checklist</h1>
-            <div class="subtitle">Tick items as you go — progress saves automatically.</div>
-          </div>
-          <div class="pill" id="pill">0 / 0</div>
-        </div>
-      </header>
+<div class="widget">
+<header>
+  <h1>APA 7 Submission Checklist</h1>
+</header>
 
-      <div class="progressBlock">
-        <div class="progressMeta">
-          <span id="progressText">0% complete</span>
-          <span id="remainingText">0 remaining</span>
-        </div>
-        <div class="bar" aria-label="progress">
-          <div class="barFill" id="barFill"></div>
-        </div>
-      </div>
-
-      <div class="list" id="checklist"></div>
-
-      <footer>
-        <button class="btn" id="resetBtn" type="button">Reset all</button>
-        <span class="hint">A4 + APA vibes. Clean. Done.</span>
-      </footer>
-    </div>
+<div class="progressWrap">
+  <div class="progressText">
+    <span id="percent">0%</span>
+    <span id="count">0/0</span>
   </div>
+  <div class="bar"><div class="fill" id="fill"></div></div>
+</div>
 
-  <script>
-    // Your exact checklist, grouped as provided
-    const CHECKLIST_DATA = [
-      {
-        group: "📄 Formatting",
-        items: [
-          { text: "A4, 2.54 cm margins" },
-          { text: "Double-spaced, left-aligned" },
-          { text: "Page numbers top right" },
-          { text: "Approved font (e.g. Times New Roman 12)" },
-          { text: "0.5 inch paragraph indents" },
-          { text: "No running head" }
-        ]
-      },
-      {
-        group: "🏷️ Title Page",
-        items: [
-          { text: "Title bold + centred (upper half)" },
-          { text: "Name, university, course code/name" },
-          { text: "Instructor name" },
-          { text: "Due date (Day Month Year)" }
-        ]
-      },
-      {
-        group: "🧠 Headings & Structure",
-        items: [
-          { text: "APA heading levels used correctly" },
-          { text: "No heading called “Introduction”" },
-          { text: "Paragraphs clearly linked to the question" }
-        ]
-      },
-      {
-        group: "📚 In-Text Citations",
-        items: [
-          { text: "All claims cited (author + year)" },
-          { text: "Quotes include page numbers" },
-          { text: "Correct use of et al." },
-          { text: "Every reference cited in text" }
-        ]
-      },
-      {
-        group: "📖 Reference List",
-        items: [
-          { text: "New page titled “References” (bold, centred)" },
-          { text: "Alphabetical order" },
-          { text: "Hanging indents" },
-          { text: "Double-spaced" },
-          { text: "DOI or URL included where available" },
-          { text: "Journal titles + volume italicised" }
-        ]
-      },
-      {
-        group: "📊 Stats (if relevant)",
-        items: [
-          { text: "p, M, SD, t, F italicised" },
-          { text: "Variables named consistently" },
-          { text: "Ethics mentioned if required" }
-        ]
-      }
-    ];
+<div class="list" id="checklist"></div>
 
-    const STORAGE_KEY = "apa_checklist_state_v2";
+<footer>
+  <button onclick="resetList()">Reset</button>
+</footer>
+</div>
 
-    const elChecklist = document.getElementById("checklist");
-    const elBarFill = document.getElementById("barFill");
-    const elProgressText = document.getElementById("progressText");
-    const elRemainingText = document.getElementById("remainingText");
-    const elPill = document.getElementById("pill");
-    const resetBtn = document.getElementById("resetBtn");
+<script>
+const DATA = [
+{group:"Formatting",items:[
+"A4, 2.54 cm margins",
+"Double-spaced, left-aligned",
+"Page numbers top right",
+"Approved font (e.g. Times New Roman 12)",
+"0.5 inch paragraph indents",
+"No running head"
+]},
+{group:"Title Page",items:[
+"Title bold + centred",
+"Name, university, course code/name",
+"Instructor name",
+"Due date (Day Month Year)"
+]},
+{group:"Headings & Structure",items:[
+"APA heading levels used correctly",
+"No heading called 'Introduction'",
+"Paragraphs linked to question"
+]},
+{group:"In-Text Citations",items:[
+"All claims cited (author + year)",
+"Quotes include page numbers",
+"Correct use of et al.",
+"Every reference cited in text"
+]},
+{group:"Reference List",items:[
+"'References' bold + centred",
+"Alphabetical order",
+"Hanging indents",
+"Double-spaced",
+"DOI/URL included",
+"Journal titles + volume italicised"
+]},
+{group:"Stats (if relevant)",items:[
+"p, M, SD, t, F italicised",
+"Variables named consistently",
+"Ethics mentioned if required"
+]}
+];
 
-    function loadState() {
-      try {
-        const raw = localStorage.getItem(STORAGE_KEY);
-        return raw ? JSON.parse(raw) : {};
-      } catch {
-        return {};
-      }
-    }
+const STORAGE="apa_widget_v1";
+const container=document.getElementById("checklist");
+const fill=document.getElementById("fill");
+const percent=document.getElementById("percent");
+const count=document.getElementById("count");
 
-    function saveState(state) {
-      try {
-        localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
-      } catch {}
-    }
+function load(){return JSON.parse(localStorage.getItem(STORAGE)||"{}");}
+function save(s){localStorage.setItem(STORAGE,JSON.stringify(s));}
 
-    function computeTotals(state) {
-      const allIds = [];
-      CHECKLIST_DATA.forEach((g, gi) => {
-        g.items.forEach((_, ii) => allIds.push(`${gi}:${ii}`));
-      });
+function render(){
+  const state=load();
+  container.innerHTML="";
+  let total=0,done=0;
 
-      const total = allIds.length;
-      const done = allIds.filter(id => !!state[id]).length;
-      return { total, done, remaining: total - done };
-    }
+  DATA.forEach((g,gi)=>{
+    const title=document.createElement("div");
+    title.className="groupTitle";
+    title.textContent=g.group;
+    container.appendChild(title);
 
-    function updateUI(state) {
-      const { total, done, remaining } = computeTotals(state);
-      const pct = total === 0 ? 0 : Math.round((done / total) * 100);
+    g.items.forEach((item,ii)=>{
+      total++;
+      const id=`${gi}-${ii}`;
+      if(state[id]) done++;
 
-      elBarFill.style.width = `${pct}%`;
-      elProgressText.textContent = `${pct}% complete`;
-      elRemainingText.textContent = `${remaining} remaining`;
-      elPill.textContent = `${done} / ${total}`;
-    }
+      const label=document.createElement("label");
+      label.className="item";
+      if(state[id]) label.classList.add("checked");
 
-    function render() {
-      const state = loadState();
-      elChecklist.innerHTML = "";
+      const cb=document.createElement("input");
+      cb.type="checkbox";
+      cb.checked=!!state[id];
 
-      CHECKLIST_DATA.forEach((group, gi) => {
-        const groupEl = document.createElement("div");
-        groupEl.className = "group";
+      cb.onchange=()=>{
+        const s=load();
+        s[id]=cb.checked;
+        save(s);
+        render();
+      };
 
-        const headerEl = document.createElement("div");
-        headerEl.className = "groupHeader";
+      const span=document.createElement("div");
+      span.className="label";
+      span.textContent=item;
 
-        const titleEl = document.createElement("div");
-        titleEl.className = "groupTitle";
-        titleEl.textContent = group.group;
-
-        const groupTotal = group.items.length;
-        const groupDone = group.items.filter((_, ii) => state[`${gi}:${ii}`]).length;
-
-        const countEl = document.createElement("div");
-        countEl.className = "groupCount";
-        countEl.textContent = `${groupDone}/${groupTotal}`;
-
-        headerEl.appendChild(titleEl);
-        headerEl.appendChild(countEl);
-
-        const itemsEl = document.createElement("div");
-        itemsEl.className = "items";
-
-        group.items.forEach((item, ii) => {
-          const id = `${gi}:${ii}`;
-
-          const label = document.createElement("label");
-          label.className = "item";
-          label.setAttribute("data-id", id);
-
-          const cb = document.createElement("input");
-          cb.type = "checkbox";
-          cb.checked = !!state[id];
-
-          cb.addEventListener("change", () => {
-            const next = loadState();
-            next[id] = cb.checked;
-            saveState(next);
-            // Re-render so group counters + strike-through update cleanly
-            render();
-          });
-
-          const textWrap = document.createElement("div");
-          textWrap.className = "text";
-
-          const main = document.createElement("div");
-          main.className = "main";
-          main.textContent = item.text;
-
-          textWrap.appendChild(main);
-
-          if (item.note) {
-            const note = document.createElement("div");
-            note.className = "note";
-            note.textContent = item.note;
-            textWrap.appendChild(note);
-          }
-
-          label.appendChild(cb);
-          label.appendChild(textWrap);
-
-          if (cb.checked) label.classList.add("checked");
-
-          itemsEl.appendChild(label);
-        });
-
-        groupEl.appendChild(headerEl);
-        groupEl.appendChild(itemsEl);
-        elChecklist.appendChild(groupEl);
-      });
-
-      updateUI(state);
-    }
-
-    resetBtn.addEventListener("click", () => {
-      localStorage.removeItem(STORAGE_KEY);
-      render();
+      label.appendChild(cb);
+      label.appendChild(span);
+      container.appendChild(label);
     });
+  });
 
-    render();
-  </script>
+  const pct=total?Math.round((done/total)*100):0;
+  fill.style.width=pct+"%";
+  percent.textContent=pct+"%";
+  count.textContent=done+"/"+total;
+}
+
+function resetList(){
+  localStorage.removeItem(STORAGE);
+  render();
+}
+
+render();
+</script>
 </body>
 </html>
