--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>APA Checklist (Tabbed)</title>
+<title>APA Checklist</title>
+
 <style>
 :root{
   --bg:#f5f5f5;
@@ -16,30 +17,36 @@
 }
 
 *{box-sizing:border-box;}
+
 body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   background:var(--bg);
-  padding:10px;
+
+  /* TRUE vertical centering */
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:20px;
 }
 
 .widget{
+  width:100%;
   max-width:380px;
-  margin:auto;
   background:var(--card);
   border:1px solid var(--border);
   border-radius:var(--radius);
-  box-shadow:0 4px 14px rgba(0,0,0,0.05);
+  box-shadow:0 6px 18px rgba(0,0,0,0.05);
   overflow:hidden;
 }
 
 header{
-  padding:12px;
+  padding:14px;
   border-bottom:1px solid var(--border);
   display:flex;
   align-items:center;
   justify-content:space-between;
-  gap:10px;
 }
 
 h1{
@@ -55,11 +62,10 @@ h1{
   border:1px solid var(--border);
   padding:5px 8px;
   border-radius:999px;
-  white-space:nowrap;
 }
 
 .progressWrap{
-  padding:8px 12px 0 12px;
+  padding:10px 14px 0 14px;
 }
 
 .progressText{
@@ -84,7 +90,14 @@ h1{
   transition:width .2s ease;
 }
 
-/* Tabs */
+/* Scroll hint section */
+.scrollHint{
+  padding:8px 14px 0 14px;
+  font-size:11px;
+  color:var(--muted);
+  text-align:center;
+}
+
 .tabs{
   display:flex;
   gap:6px;
@@ -93,7 +106,10 @@ h1{
   scrollbar-width:thin;
 }
 .tabs::-webkit-scrollbar{ height:6px; }
-.tabs::-webkit-scrollbar-thumb{ background:#d7d7d7; border-radius:999px; }
+.tabs::-webkit-scrollbar-thumb{
+  background:#d7d7d7;
+  border-radius:999px;
+}
 
 .tab{
   flex:0 0 auto;
@@ -104,7 +120,6 @@ h1{
   padding:6px 10px;
   border-radius:999px;
   cursor:pointer;
-  user-select:none;
   white-space:nowrap;
 }
 .tab.active{
@@ -113,21 +128,18 @@ h1{
   border-color:#111;
 }
 
-/* Panel */
 .panel{
-  padding:10px 10px 12px 10px;
+  padding:12px;
 }
 
 .panelTitle{
   font-size:12px;
   font-weight:650;
-  color:var(--text);
-  margin:2px 2px 8px 2px;
+  margin-bottom:8px;
   display:flex;
-  align-items:center;
   justify-content:space-between;
-  gap:10px;
 }
+
 .panelCount{
   font-size:11px;
   color:var(--muted);
@@ -143,14 +155,12 @@ label.item{
   display:flex;
   align-items:flex-start;
   gap:8px;
-  padding:8px 8px;
+  padding:8px;
   border-radius:10px;
-  border:1px solid transparent;
   cursor:pointer;
 }
 label.item:hover{
   background:#f3f3f3;
-  border-color:#ededed;
 }
 
 input[type="checkbox"]{
@@ -163,7 +173,6 @@ input[type="checkbox"]{
 .text{
   font-size:12px;
   line-height:1.3;
-  color:var(--text);
 }
 .checked .text{
   text-decoration:line-through;
@@ -172,11 +181,10 @@ input[type="checkbox"]{
 
 footer{
   border-top:1px solid var(--border);
-  padding:8px 12px;
+  padding:8px 14px;
   display:flex;
-  align-items:center;
   justify-content:space-between;
-  gap:10px;
+  align-items:center;
 }
 
 button{
@@ -188,15 +196,7 @@ button{
   padding:6px 10px;
   cursor:pointer;
 }
-button:hover{ color:#000; border-color:#d0d0d0; }
-
-.hint{
-  font-size:11px;
-  color:var(--muted);
-  overflow:hidden;
-  text-overflow:ellipsis;
-  white-space:nowrap;
-}
+button:hover{color:#000;}
 </style>
 </head>
 
@@ -215,6 +215,11 @@ button:hover{ color:#000; border-color:#d0d0d0; }
     <div class="bar"><div class="fill" id="fill"></div></div>
   </div>
 
+  <!-- NEW Scroll Instruction -->
+  <div class="scrollHint">
+    Scroll right to view sections →
+  </div>
+
   <div class="tabs" id="tabs"></div>
 
   <div class="panel">
@@ -226,8 +231,7 @@ button:hover{ color:#000; border-color:#d0d0d0; }
   </div>
 
   <footer>
-    <button type="button" id="resetBtn">Reset</button>
-    <div class="hint">Swipe tabs →</div>
+    <button id="resetBtn">Reset</button>
   </footer>
 </div>
 
@@ -237,169 +241,133 @@ const DATA = [
     "A4, 2.54 cm margins",
     "Double-spaced, left-aligned",
     "Page numbers top right",
-    "Approved font (e.g. Times New Roman 12)",
-    "0.5 inch paragraph indents",
+    "Approved font",
+    "0.5 inch indents",
     "No running head"
   ]},
   { key:"title", label:"Title Page", items:[
-    "Title bold + centred (upper half)",
-    "Name, university, course code/name",
+    "Title bold + centred",
+    "Name + university",
     "Instructor name",
-    "Due date (Day Month Year)"
+    "Due date"
   ]},
   { key:"structure", label:"Headings", items:[
-    "APA heading levels used correctly",
-    "No heading called “Introduction”",
-    "Paragraphs clearly linked to the question"
+    "APA heading levels correct",
+    "No 'Introduction' heading",
+    "Paragraphs linked to question"
   ]},
   { key:"citations", label:"In-Text", items:[
-    "All claims cited (author + year)",
+    "All claims cited",
     "Quotes include page numbers",
-    "Correct use of et al.",
-    "Every reference cited in text"
+    "Correct et al.",
+    "All refs cited in text"
   ]},
   { key:"refs", label:"References", items:[
-    "New page titled “References” (bold, centred)",
+    "'References' bold + centred",
     "Alphabetical order",
     "Hanging indents",
     "Double-spaced",
-    "DOI or URL included where available",
-    "Journal titles + volume italicised"
+    "DOI/URL included",
+    "Journal + volume italicised"
   ]},
   { key:"stats", label:"Stats", items:[
     "p, M, SD, t, F italicised",
-    "Variables named consistently",
-    "Ethics mentioned if required"
+    "Variables consistent",
+    "Ethics mentioned"
   ]}
 ];
 
-const STORAGE_STATE = "apa_tabs_state_v1";
-const STORAGE_TAB = "apa_tabs_active_v1";
+const STORAGE="apa_tabs_state_v2";
+const STORAGE_TAB="apa_tabs_active_v2";
 
-const tabsEl = document.getElementById("tabs");
-const itemsEl = document.getElementById("items");
-const panelTitleEl = document.getElementById("panelTitle");
-const panelCountEl = document.getElementById("panelCount");
-const fillEl = document.getElementById("fill");
-const pillEl = document.getElementById("pill");
-const percentEl = document.getElementById("percent");
-const remainingEl = document.getElementById("remaining");
-const resetBtn = document.getElementById("resetBtn");
+const tabsEl=document.getElementById("tabs");
+const itemsEl=document.getElementById("items");
+const panelTitle=document.getElementById("panelTitle");
+const panelCount=document.getElementById("panelCount");
+const fill=document.getElementById("fill");
+const pill=document.getElementById("pill");
+const percent=document.getElementById("percent");
+const remaining=document.getElementById("remaining");
+const resetBtn=document.getElementById("resetBtn");
 
-function loadState(){
-  try { return JSON.parse(localStorage.getItem(STORAGE_STATE) || "{}"); }
-  catch { return {}; }
-}
-function saveState(state){
-  try { localStorage.setItem(STORAGE_STATE, JSON.stringify(state)); } catch {}
-}
-function loadActiveTab(){
-  const k = localStorage.getItem(STORAGE_TAB);
-  return DATA.some(d => d.key === k) ? k : DATA[0].key;
-}
-function saveActiveTab(key){
-  try { localStorage.setItem(STORAGE_TAB, key); } catch {}
-}
+function load(){return JSON.parse(localStorage.getItem(STORAGE)||"{}");}
+function save(s){localStorage.setItem(STORAGE,JSON.stringify(s));}
+function loadTab(){return localStorage.getItem(STORAGE_TAB)||DATA[0].key;}
+function saveTab(k){localStorage.setItem(STORAGE_TAB,k);}
+
+let active=loadTab();
 
 function totals(state){
-  let total = 0, done = 0;
-  DATA.forEach((g) => {
-    g.items.forEach((_, idx) => {
+  let total=0,done=0;
+  DATA.forEach(g=>{
+    g.items.forEach((_,i)=>{
       total++;
-      if (state[`${g.key}:${idx}`]) done++;
+      if(state[`${g.key}:${i}`]) done++;
     });
   });
-  return { total, done, remaining: total - done };
+  return {total,done,remaining:total-done};
 }
 
-function groupTotals(state, groupKey){
-  const group = DATA.find(d => d.key === groupKey);
-  if(!group) return { total:0, done:0 };
-  const total = group.items.length;
-  let done = 0;
-  group.items.forEach((_, idx) => {
-    if (state[`${group.key}:${idx}`]) done++;
-  });
-  return { total, done };
+function groupTotals(state,key){
+  const g=DATA.find(d=>d.key===key);
+  let done=0;
+  g.items.forEach((_,i)=>{if(state[`${key}:${i}`]) done++;});
+  return {total:g.items.length,done};
 }
 
-let activeKey = loadActiveTab();
-
-function renderTabs(){
-  const state = loadState();
-  tabsEl.innerHTML = "";
-  DATA.forEach(g => {
-    const btn = document.createElement("button");
-    btn.type = "button";
-    btn.className = "tab" + (g.key === activeKey ? " active" : "");
-    const gt = groupTotals(state, g.key);
-    btn.textContent = `${g.label} ${gt.done}/${gt.total}`;
-    btn.onclick = () => {
-      activeKey = g.key;
-      saveActiveTab(activeKey);
-      render();
-    };
+function render(){
+  const state=load();
+  tabsEl.innerHTML="";
+  DATA.forEach(g=>{
+    const btn=document.createElement("button");
+    btn.className="tab"+(g.key===active?" active":"");
+    const gt=groupTotals(state,g.key);
+    btn.textContent=`${g.label} ${gt.done}/${gt.total}`;
+    btn.onclick=()=>{active=g.key;saveTab(active);render();};
     tabsEl.appendChild(btn);
   });
-}
 
-function renderPanel(){
-  const state = loadState();
-  const group = DATA.find(d => d.key === activeKey) || DATA[0];
-  const gt = groupTotals(state, group.key);
+  const group=DATA.find(d=>d.key===active);
+  const gt=groupTotals(state,active);
 
-  panelTitleEl.textContent = group.label;
-  panelCountEl.textContent = `${gt.done}/${gt.total}`;
-  itemsEl.innerHTML = "";
+  panelTitle.textContent=group.label;
+  panelCount.textContent=`${gt.done}/${gt.total}`;
+  itemsEl.innerHTML="";
 
-  group.items.forEach((text, idx) => {
-    const id = `${group.key}:${idx}`;
+  group.items.forEach((text,i)=>{
+    const id=`${active}:${i}`;
+    const label=document.createElement("label");
+    label.className="item";
+    if(state[id]) label.classList.add("checked");
 
-    const label = document.createElement("label");
-    label.className = "item";
-    if (state[id]) label.classList.add("checked");
-
-    const cb = document.createElement("input");
-    cb.type = "checkbox";
-    cb.checked = !!state[id];
-    cb.onchange = () => {
-      const next = loadState();
-      next[id] = cb.checked;
-      saveState(next);
-      render(); // refresh counts + progress + strike-through
+    const cb=document.createElement("input");
+    cb.type="checkbox";
+    cb.checked=!!state[id];
+    cb.onchange=()=>{
+      const s=load();
+      s[id]=cb.checked;
+      save(s);
+      render();
     };
 
-    const div = document.createElement("div");
-    div.className = "text";
-    div.textContent = text;
+    const div=document.createElement("div");
+    div.className="text";
+    div.textContent=text;
 
     label.appendChild(cb);
     label.appendChild(div);
     itemsEl.appendChild(label);
   });
+
+  const t=totals(state);
+  const pct=t.total?Math.round((t.done/t.total)*100):0;
+  fill.style.width=pct+"%";
+  pill.textContent=`${t.done}/${t.total}`;
+  percent.textContent=`${pct}% complete`;
+  remaining.textContent=`${t.remaining} remaining`;
 }
 
-function renderProgress(){
-  const state = loadState();
-  const t = totals(state);
-  const pct = t.total ? Math.round((t.done / t.total) * 100) : 0;
-
-  fillEl.style.width = pct + "%";
-  pillEl.textContent = `${t.done}/${t.total}`;
-  percentEl.textContent = `${pct}% complete`;
-  remainingEl.textContent = `${t.remaining} remaining`;
-}
-
-function render(){
-  renderTabs();
-  renderPanel();
-  renderProgress();
-}
-
-resetBtn.onclick = () => {
-  localStorage.removeItem(STORAGE_STATE);
-  render();
-};
+resetBtn.onclick=()=>{localStorage.removeItem(STORAGE);render();};
 
 render();
 </script>
