--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@ body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   background:var(--bg);
-
-  /* TRUE vertical centering */
   min-height:100vh;
   display:flex;
   align-items:center;
@@ -90,7 +88,27 @@ h1{
   transition:width .2s ease;
 }
 
-/* Scroll hint section */
+/* READY MESSAGE */
+.readyBanner{
+  margin:10px 14px 0 14px;
+  padding:8px 10px;
+  border-radius:10px;
+  font-size:12px;
+  text-align:center;
+  background:#111;
+  color:#fff;
+  opacity:0;
+  transform:translateY(-4px);
+  transition:all .25s ease;
+  pointer-events:none;
+}
+
+.readyBanner.show{
+  opacity:1;
+  transform:translateY(0);
+}
+
+/* Scroll hint */
 .scrollHint{
   padding:8px 14px 0 14px;
   font-size:11px;
@@ -215,7 +233,10 @@ button:hover{color:#000;}
     <div class="bar"><div class="fill" id="fill"></div></div>
   </div>
 
-  <!-- NEW Scroll Instruction -->
+  <div class="readyBanner" id="readyBanner">
+    🎉 Ready to submit!
+  </div>
+
   <div class="scrollHint">
     Scroll right to view sections →
   </div>
@@ -277,9 +298,10 @@ const DATA = [
   ]}
 ];
 
-const STORAGE="apa_tabs_state_v2";
-const STORAGE_TAB="apa_tabs_active_v2";
+const STORAGE="apa_tabs_state_v3";
+const STORAGE_TAB="apa_tabs_active_v3";
 
+const readyBanner=document.getElementById("readyBanner");
 const tabsEl=document.getElementById("tabs");
 const itemsEl=document.getElementById("items");
 const panelTitle=document.getElementById("panelTitle");
@@ -317,6 +339,7 @@ function groupTotals(state,key){
 
 function render(){
   const state=load();
+
   tabsEl.innerHTML="";
   DATA.forEach(g=>{
     const btn=document.createElement("button");
@@ -365,6 +388,13 @@ function render(){
   pill.textContent=`${t.done}/${t.total}`;
   percent.textContent=`${pct}% complete`;
   remaining.textContent=`${t.remaining} remaining`;
+
+  // READY MESSAGE LOGIC
+  if(t.total>0 && t.done===t.total){
+    readyBanner.classList.add("show");
+  } else {
+    readyBanner.classList.remove("show");
+  }
 }
 
 resetBtn.onclick=()=>{localStorage.removeItem(STORAGE);render();};
