--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <style>
 :root{
-  --bg:#f5f5f5;
-  --card:#ffffff;
+  --bg:#FFFFFF;
+  --card:#FAF9F6;
   --border:#e3e3e3;
   --text:#222;
   --muted:#6a6a6a;
